--- a/app/src/main/res/layout/playgroundlayout.xml
+++ b/app/src/main/res/layout/playgroundlayout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:layout_marginTop="0dp"
     android:textColor="@color/setting_header"
@@ -9,7 +10,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/playground_scrolview">
+        android:id="@+id/playground_scrollview">
 
 
         <LinearLayout
@@ -680,4 +681,17 @@
 
 
 
-</RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:clickable="true"
+        android:src="@drawable/add_comment_floatbutton"
+        app:layout_anchor="@id/playground_scrollview"
+        app:layout_anchorGravity="bottom|right"/>
+
+
+
+</android.support.design.widget.CoordinatorLayout>
