add post images downloading func

--- a/app/src/main/res/layout/playground_single_post.xml
+++ b/app/src/main/res/layout/playground_single_post.xml
@@ -36,8 +36,8 @@
             android:layout_marginTop="5dp"
             android:paddingLeft="10dp"
             > <ImageView
-            android:layout_width="58dp"
-            android:layout_height="58dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:src="@drawable/defualt_profile"
             android:id="@+id/profileimg"/>
 
@@ -47,15 +47,15 @@
                 android:layout_height="wrap_content"
                 android:text="钟庆"
                 android:textColor="@color/post_name"
-                android:id="@+id/textView2"
+                android:id="@+id/profilenickname"
                 android:layout_toRightOf="@id/profileimg"
                 android:layout_marginLeft="8dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="上午 07:21"
-                android:id="@+id/textView"
-                android:layout_below="@+id/textView2"
+                android:id="@+id/posttime"
+                android:layout_below="@+id/profilenickname"
                 android:layout_toRightOf="@id/profileimg"
                 android:layout_marginTop="5dp"
                 android:layout_marginLeft="8dp"/>
@@ -64,8 +64,9 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_filter_girl"
                 android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/textView2"
-                android:layout_marginLeft="2dp"/>
+                android:layout_toRightOf="@+id/profilenickname"
+                android:layout_marginLeft="2dp"
+                android:id="@+id/genderimg"/>
 
         </RelativeLayout>
 
@@ -82,11 +83,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:id="@+id/posttext"
                 android:text="@string/testString"
                 android:textColor="@color/Black"/>
             <ImageView
                 android:layout_width="200dp"
                 android:layout_height="200dp"
+                android:id="@+id/postimg"
                 android:src="@drawable/ic_not_real_avatar_tip"/>
         </LinearLayout>
 
