--- a/app/src/main/res/layout/playgroundlayout.xml
+++ b/app/src/main/res/layout/playgroundlayout.xml
@@ -18,7 +18,7 @@
 
 
     <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+        android:id="@+id/send_post_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
