--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -156,6 +156,10 @@
     <color name="post_name">#1F1F1F</color>
 
 
+    <color name="send_post_background_color">#f1f2f5</color>
+    <color name="send_post_header_color">#f5f5f5</color>
+
+
     <!-- tab color -->
 
     <color name="tab_text_selected">#0080FF</color>
